components/apache-devlake-chart/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apache-devlake
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
